# backend-ii

Aula01/: bubbleSort.py  fatorial.py
Aula02/design_patterns_api/: pyproject.toml
Aula03/: countDown.py  download.py  relogioCount.py  thread.py  threads.py
Aula03/book_project/: pyproject.toml
Aula03/book_project/src/: api.py  books.json
Aula04/: README.md  factorial_processor.py  requirements.txt  test_factorial.py
Aula04/multithread_process/: pyproject.toml
Aula04/multithread_process/src/: remFundo.py
Aula04/multithread_process/src/mp/: multiprocess.py
Aula04/multithread_process/src/mt/: multithread.py
Aula05/: README.md  main.py  test_api.py
Aula06/: Exercicio.md  README.md  concurrency.py  rate_limiter.py  requirements.txt  test_rate_limiter.py
Aula07/: README.md  logger_example.py  logs.py  logs_desafio.py  requirements.txt  test_logger.py
Aula08/: README.md  calculator.py  test_calculator.py
Aula09/: pytest.ini  requirements.txt
Aula09/blog/: models.py  views.py
Aula09/blog/tests/: test_models.py
Aula10/: README.md  main.py  test_main.py
Aula11/: README.md  requirements.txt  test_main.py
Aula12/: README.md  client.py  cube.proto  requirements.txt  server.py  test_grpc.py
Aula13/: README.md  requirements.txt
Aula13/django_project/: views.py
Aula13/fastapi_app/: main.py
Aula14/: README.md  agent_example.py  requirements.txt  test_agent.py
Aula15/: README.md  requirements.txt  stateful_agent.py  test_stateful_agent.py
Aula16/: README.md
Aula16/.github/workflows/: ci.yml
concurrency_overview/: pyproject.toml
(+5 files in other folders)
